--- a/auctioneer-sign-up-2.html
+++ b/auctioneer-sign-up-2.html
@@ -72,10 +72,10 @@
                 </div>
               </div>
             </div>
-            <p class="pb-3">You need to verify your identity before you can start list your auction. We use secure validation through licensed 3-rd party provider that integrates with Saudi Arabia’s National ID information.</p>
+            <p class="pb-3 text-gray">You need to verify your identity before you can start list your auction. We use secure validation through licensed 3-rd party provider that integrates with Saudi Arabia’s National ID information.</p>
             <div class="row align-items-center mt-4 pt-3">
               <div class="col-sm-auto">
-                <a href="#!" class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Verify and Start Bidding</a>
+                <button class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Verify and Start Bidding</button>
               </div>
             </div>
           </div>
