--- a/auctioneer-sign-up-4.html
+++ b/auctioneer-sign-up-4.html
@@ -67,7 +67,7 @@
                 <h2 class="h2 mb-4 lh-1">Thank you for joining</h2>
               </div>
             </div>
-            <p>Please allow 2-3 business days for your application to be approved. In the mean time you can check our blog post on optimizing your auction for better conversions and search engine visibility. <a href="#!" class="see-all see-all-2 fz-16">Read the article here</a></p>
+            <p class="text-gray">Please allow 2-3 business days for your application to be approved. In the mean time you can check our blog post on optimizing your auction for better conversions and search engine visibility. <a href="#!" class="see-all see-all-2 fz-16">Read the article here</a></p>
           </div>
         </div>
       </div>
