--- a/auctioneer-sign-up-6.html
+++ b/auctioneer-sign-up-6.html
@@ -65,10 +65,10 @@
                 <h2 class="h2 mb-4 lh-1">Welcome to Asaas!</h2>
               </div>
             </div>
-            <p>We are happy to have you onboard! Start by creating your first Auction with the button below.</p>
+            <p class="text-gray">We are happy to have you onboard! Start by creating your first Auction with the button below.</p>
             <div class="row align-items-center mt-4">
               <div class="col-sm-auto">
-                <a href="#!" class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Create your first Auction</a>
+                <button class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Create your first Auction</button>
               </div>
             </div>
           </div>
