--- a/auctioneer-sign-up-0.html
+++ b/auctioneer-sign-up-0.html
@@ -73,7 +73,7 @@
                 </div>
               </div>
             </div>
-            <p class="pb-3">Please enter your phone number to sign up or sign in. If you already have an account, you will receive an email with a magic login link.</p>
+            <p class="pb-3 text-gray">Please enter your phone number to sign up or sign in. If you already have an account, you will receive an email with a magic login link.</p>
             <form id="form">
               <div class="form-group">
                 <div class="mb-2">Your phone number<span class="text-red">*</span></div>
@@ -81,7 +81,7 @@
               </div>
               <div class="row align-items-center mt-4 pt-3">
                 <div class="col-sm-auto">
-                  <a href="#!" class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Get SMS code</a>
+                  <button class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Get SMS code</button>
                 </div>
                 <div class="col-sm text-center text-sm-right mt-2 mt-sm-0">
                   <a href="#!" class="see-all see-all-2">For Bidders</a>
