--- a/auctioneer-sign-up-5.html
+++ b/auctioneer-sign-up-5.html
@@ -74,7 +74,7 @@
             </div>
             <div class="row">
               <div class="col-xl-9">
-                <p class="pb-3">Our team has encountered some issues with your application. Please review them below. <br> If you need personal assitance, please don’t hesistate to call us at +966 1000 1000.</p>
+                <p class="pb-3 text-gray">Our team has encountered some issues with your application. Please review them below. <br> If you need personal assitance, please don’t hesistate to call us at +966 1000 1000.</p>
               </div>
             </div>
             <ul class="list-check list-check-warning d-inline-block text-left fz-18 pb-0 pb-lg-3">
@@ -85,18 +85,20 @@
               <div class="row">
                 <div class="col-xl-6">
                   <div class="form-group">
-                    <div class="row row-1 mb-2 align-items-center">
-                      <div class="col">Company registration number<span class="text-red">*</span>
-                      </div>
-                      <div class="col-auto fz-14">
-                        <div id="the-count" class="the-count">
-                          <span id="current">0</span>
-                          <span id="maximum">/8</span>
+                    <div class="d-flex flex-column-reverse">
+                      <input type="number" class="form-control" placeholder="1010584421" name="registrationnumber" id="count-eight" maxlength="8">
+                      <div class="row row-1 mb-2 align-items-center">
+                        <div class="col">Company registration number<span class="text-red">*</span>
+                        </div>
+                        <div class="col-auto fz-14">
+                          <div id="the-count" class="the-count">
+                            <span id="current">0</span>
+                            <span id="maximum">/8</span>
+                          </div>
                         </div>
                       </div>
                     </div>
-                    <input type="number" class="form-control" placeholder="1010584421" name="registrationnumber" id="count-eight" maxlength="8">
-                    <div class="fz-14 mt-2">Your license registration number found on your X10C certificate</div>
+                    <div class="fz-14 mt-2 confirmed">Your license registration number found on your X10C certificate</div>
                   </div>
                 </div>
                 <div class="col-xl-6">
@@ -106,17 +108,17 @@
                       </div>
                     </div>
                     <div class="uploader-plugin">
-                      <div id="uploader">
-                        <div class="uploadDoc">
-                          <div class="fileUpload btn btn-orange">
-                            <img src="img/upload.svg" class="icon">
-                            <span class="upl" id="upload">Upload your auction license certificate</span>
-                            <input type="file" class="upload up" id="up" onchange="readURL(this);"/>
-                          </div>
-                        </div>
+                      <input type="file" class="upload up" name="upload"/>
+                      <div class="fileUpload">
+                        <img src="img/upload.svg" class="icon">
+                        <span class="upl">Upload your auction license certificate</span>
                       </div>
+                      <a href="#!" class="delete-small">
+                        <img src="img/delete.svg" alt="">
+                        <img src="img/delete-2.svg" alt="" class="delete-2">
+                      </a>
                     </div>
-                    <div class="fz-14 mt-2">Please upload your X5-C auction certificate as pdf, png, or jpeg image</div>
+                    <div class="fz-14 mt-2 confirmed">Please upload your X5-C auction certificate as pdf, png, or jpeg image</div>
                   </div>
                 </div>
               </div>
@@ -127,8 +129,8 @@
                       <div class="col">Company display name<span class="text-red">*</span>
                       </div>
                     </div>
-                    <input type="text" class="form-control" placeholder="Awesome Auctions" name="firstname">
-                    <div class="fz-14 mt-2">Use your company’s brand or shorthand name. Example: Awesome Auctions</div>
+                    <input type="text" class="form-control" placeholder="Awesome Auctions" name="displayname">
+                    <div class="fz-14 mt-2 confirmed">Use your company’s brand or shorthand name. Example: Awesome Auctions</div>
                   </div>
                   <div class="form-group">
                     <div class="row row-1 mb-3 align-items-center">
@@ -139,7 +141,7 @@
                       <div class="col-sm-6 col-lg-4">
                         <div id="file-upload-form" class="uploader">
                           <input id="file-upload" type="file" name="fileUpload" accept="image/*"/>
-                          <label for="file-upload" id="file-drag">
+                          <label for="file-upload" id="file-drag" class="position-relative">
                             <img id="file-image" src="#!" alt="Preview" class="hidden">
                             <div id="start">
                               <i class="bg-upload" aria-hidden="true"></i>
@@ -149,11 +151,14 @@
                             <div id="response" class="hidden">
                               <div id="messages"></div>
                             </div>
+                            <a href="#!" class="delete-img">
+                              <img src="img/delete.svg" alt="">
+                            </a>
                           </label>
                         </div>           
                       </div>
                       <div class="col-sm-6 col-lg-8 mt-3 mt-sm-0">
-                        <div class="fz-14">
+                        <div class="fz-14 confirmed">
                           <p>Please upload your comapny’s icon or emblem. This image will be displayed on your auctions.</p>
                           <p>For ideal results upload a 400x400 square jpeg file.</p>
                         </div>
@@ -163,24 +168,26 @@
                 </div>
                 <div class="col-xl-6">
                   <div class="form-group">
-                    <div class="row row-1 mb-2 align-items-center">
-                      <div class="col">Company description<span class="text-red">*</span>
-                      </div>
-                      <div class="col-auto fz-14">
-                        <div id="the-count-200" class="the-count">
-                          <span id="current-200">0</span>
-                          <span id="maximum-200">/200</span>
+                    <div class="d-flex flex-column-reverse">
+                      <textarea type="text" class="form-control form-textarea" placeholder="At Awesome auctions we are focused on developing the regions" name="description" id="count-200" maxlength="200"></textarea>
+                      <div class="row row-1 mb-2 align-items-center">
+                        <div class="col">Company description<span class="text-red">*</span>
+                        </div>
+                        <div class="col-auto fz-14">
+                          <div id="the-count-200" class="the-count">
+                            <span id="current-200">0</span>
+                            <span id="maximum-200">/200</span>
+                          </div>
                         </div>
                       </div>
                     </div>
-                    <textarea type="text" class="form-control form-textarea" placeholder="At Awesome auctions we are focused on developing the regions" name="description" id="count-200" maxlength="200"></textarea>
-                    <div class="fz-14 mt-2">This description will be displayed on your auctions</div>
+                    <div class="fz-14 mt-2 confirmed">This description will be displayed on your auctions</div>
                   </div>
                 </div>
               </div>
               <div class="row align-items-center mt-4">
                 <div class="col-sm-auto">
-                  <a href="#!" class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Complete your registration</a>
+                  <button class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Complete your registration</button>
                 </div>
               </div>
             </form>
