--- a/bidder-account-edit.html
+++ b/bidder-account-edit.html
@@ -60,7 +60,7 @@
   <section class="section bg-white">
     <div class="container">
       <div class="form-row justify-content-center">
-        <div class="col-sm-11 col-md-8 col-xl-9">
+        <div class="col-sm-11 col-md-8">
           <div class="">
             <div class="row align-items-center mb-2">
               <div class="col">
@@ -73,7 +73,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-xl-8">
+              <div class="col-xl-8 text-gray">
                 <p>Your information is not shared publicly on Asaas. <br> We only share your details to the auctioneer whose auction you won.</p>
                 <p class="pb-3">For security reasons, key account information such as phone number, email, and company details can only be updated through contacting Asaas.</p>
               </div>
@@ -89,7 +89,7 @@
                 <div class="col-xl-6">
                   <div class="form-group">
                     <div class="mb-2">Second name</div>
-                    <input type="text" class="form-control" placeholder="Severus" name="firstname">
+                    <input type="text" class="form-control" placeholder="Severus" name="secondname">
                   </div>
                 </div>
               </div>
@@ -97,13 +97,13 @@
                 <div class="col-xl-6">
                   <div class="form-group">
                     <div class="mb-2">Third name</div>
-                    <input type="text" class="form-control" placeholder="Al" name="firstname">
+                    <input type="text" class="form-control" placeholder="Al" name="thirdname">
                   </div>
                 </div>
                 <div class="col-xl-6">
                   <div class="form-group">
                     <div class="mb-2">Family name<span class="text-red">*</span></div>
-                    <input type="text" class="form-control" placeholder="Potter" name="firstname">
+                    <input type="text" class="form-control" placeholder="Potter" name="familyname">
                   </div>
                 </div>
               </div>
@@ -126,7 +126,7 @@
                 <div class="col-xl-6">
                   <div class="form-group disabled">
                     <div class="mb-2">Company name<span class="text-red">*</span></div>
-                    <input type="text" class="form-control" placeholder="Awesome Industries Co." name="firstname" disabled>
+                    <input type="text" class="form-control" placeholder="Awesome Industries Co." name="compname" disabled>
                   </div>
                 </div>
                 <div class="col-xl-6">
@@ -142,13 +142,13 @@
                 <div class="col-xl-6">
                   <div class="form-group disabled">
                     <div class="mb-2">Company address<span class="text-red">*</span></div>
-                    <input type="text" class="form-control" placeholder="52 King Abdullah Rd, Riyadh" name="firstname" disabled>
+                    <input type="text" class="form-control" placeholder="52 King Abdullah Rd, Riyadh" name="compadress" disabled>
                   </div>
                 </div>
               </div>
               <div class="row align-items-center mt-4">
                 <div class="col-sm-auto">
-                  <a href="#!" class="btn btn-primary btn-sign btn-edit ml-0 fz-18 d-block d-sm-inline-block py-2">Save account changes</a>
+                  <button class="btn btn-primary btn-sign btn-edit ml-0 fz-18 d-block d-sm-inline-block py-2">Save account changes</button>
                 </div>
                 <div class="col-sm-auto text-center mt-3 mt-sm-0">
                   <a href="#!" class="see-all see-all-2 fz-18">Cancel edits</a>
