--- a/bidder-account.html
+++ b/bidder-account.html
@@ -60,7 +60,7 @@
   <section class="section bg-white">
     <div class="container">
       <div class="form-row justify-content-center">
-        <div class="col-sm-11 col-md-8 col-xl-9">
+        <div class="col-sm-11 col-md-8">
           <div class="">
             <div class="row align-items-center mb-2">
               <div class="col">
@@ -73,7 +73,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-xl-8">
+              <div class="col-xl-8 text-gray">
                 <p>Your information is not shared publicly on Asaas. <br> We only share your details to the auctioneer whose auction you won.</p>
                 <p class="pb-3">For security reasons, key account information such as phone number, email, and company details can only be updated through contacting Asaas.</p>
               </div>
@@ -82,41 +82,41 @@
               <div class="row">
                 <div class="col-xl-6">
                   <div class="form-group">
-                    <div class="mb-2 text-black">First name</div>
+                    <div class="mb-2">First name</div>
                     <input type="text" class="form-control" placeholder="Albus" name="firstname">
                   </div>
                 </div>
                 <div class="col-xl-6">
                   <div class="form-group">
-                    <div class="mb-2 text-black">Second name</div>
-                    <input type="text" class="form-control" placeholder="Severus" name="firstname">
+                    <div class="mb-2">Second name</div>
+                    <input type="text" class="form-control" placeholder="Severus" name="secondname">
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-xl-6">
                   <div class="form-group">
-                    <div class="mb-2 text-black">Third name</div>
-                    <input type="text" class="form-control" placeholder="Al" name="firstname">
+                    <div class="mb-2">Third name</div>
+                    <input type="text" class="form-control" placeholder="Al" name="thirdname">
                   </div>
                 </div>
                 <div class="col-xl-6">
                   <div class="form-group">
-                    <div class="mb-2 text-black">Family name</div>
-                    <input type="text" class="form-control" placeholder="Potter" name="firstname">
+                    <div class="mb-2">Family name</div>
+                    <input type="text" class="form-control" placeholder="Potter" name="familyname">
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-xl-6">
                   <div class="form-group">
-                    <div class="mb-2 text-black">Phone number</div>
+                    <div class="mb-2">Phone number</div>
                     <input type="number" class="form-control" placeholder="+966548777798" name="phone">
                   </div>
                 </div>
                 <div class="col-xl-6">
                   <div class="form-group">
-                    <div class="mb-2 text-black">Email</div>
+                    <div class="mb-2">Email</div>
                     <input type="email" class="form-control" placeholder="albus@ministryofmagic.com.sa" name="email">
                   </div>
                 </div>
@@ -125,36 +125,38 @@
               <div class="row pt-3">
                 <div class="col-xl-6">
                   <div class="form-group">
-                    <div class="mb-2 text-black">Company name</div>
-                    <input type="text" class="form-control" placeholder="Awesome Industries Co." name="firstname">
+                    <div class="mb-2">Company name</div>
+                    <input type="text" class="form-control" placeholder="Awesome Industries Co." name="compname">
                   </div>
                 </div>
                 <div class="col-xl-6">
                   <div class="form-group">
-                    <div class="row row-1 mb-2 align-items-center">
-                      <div class="col text-black">Registration number</div>
-                      <div class="col-auto fz-14">
-                        <div id="the-count-10" class="the-count">
-                          <span id="current-10">0</span>
-                          <span id="maximum-10">/10</span>
+                    <div class="d-flex flex-column-reverse">
+                      <input type="number" class="form-control" placeholder="101 502520 050" name="registrationnumber2" id="count-ten" maxlength="10">
+                      <div class="row row-1 mb-2 align-items-center">
+                        <div class="col text-black">Registration number</div>
+                        <div class="col-auto fz-14">
+                          <div id="the-count-10" class="the-count">
+                            <span id="current-10">0</span>
+                            <span id="maximum-10">/10</span>
+                          </div>
                         </div>
                       </div>
                     </div>
-                    <input type="number" class="form-control" placeholder="101 502520 050" name="registrationnumber2" id="count-ten" maxlength="10">
                   </div>
                 </div>
               </div>            
               <div class="row">
                 <div class="col-xl-6">
-                  <div class="form-group form-group-gray">
-                    <div class="mb-2 text-black">Company address</div>
-                    <input type="text" class="form-control" placeholder="52 King Abdullah Rd, Riyadh" name="firstname">
+                  <div class="form-group">
+                    <div class="mb-2">Company address</div>
+                    <input type="text" class="form-control" placeholder="52 King Abdullah Rd, Riyadh" name="compadress">
                   </div>
                 </div>
               </div>
               <div class="row align-items-center mt-4">
                 <div class="col-sm-auto">
-                  <a href="#!" class="btn btn-primary btn-sign btn-edit ml-0 fz-18 d-block d-sm-inline-block py-2">Edit your account</a>
+                  <button class="btn btn-primary btn-sign btn-edit ml-0 fz-18 d-block d-sm-inline-block py-2">Edit your account</button>
                 </div>
                 <div class="col-sm text-center text-sm-right mt-3 mt-sm-0">
                   <a href="#!" class="see-all see-all-2 fz-18 text-red">Sign out of Asaas</a>
