--- a/bidder-sign-up-1.html
+++ b/bidder-sign-up-1.html
@@ -73,16 +73,16 @@
                 </div>
               </div>
             </div>
-            <p class="pb-3">Please enter the code you’ve received on +966548777798. Typed the wrong phone? <a href="#!" class="see-all see-all-2 fz-16">Click here to change it.</a></p>
+            <p class="pb-3 text-gray">Please enter the code you’ve received on +966548777798. Typed the wrong phone? <a href="#!" class="see-all see-all-2 fz-16">Click here to change it.</a></p>
             <form id="form">
               <div class="form-group">
                 <div class="mb-2">SMS Code<span class="text-red">*</span></div>
                 <input type="number" class="form-control" placeholder="305-305-305" name="code">
-                <div class="fz-14 mt-2">By signing up, you agree with <a href="#!" class="see-all see-all-2 fz-14 font-weight-normal">Asaas’s TOC and Privacy Policy.</a></div>
+                <div class="fz-14 mt-2 text-gray-2">By signing up, you agree with <a href="#!" class="see-all see-all-2 fz-14 font-weight-normal">Asaas’s TOC and Privacy Policy.</a></div>
               </div>
               <div class="row align-items-center mt-4 pt-3">
                 <div class="col-sm-auto">
-                  <a href="#!" class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Verify phone number</a>
+                  <button class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Verify phone number</button>
                 </div>
                 <div class="col-sm text-center text-sm-right mt-2 mt-sm-0">
                   <a href="#!" class="see-all see-all-2">I didn’t receive it</a>
