--- a/bidder-sign-up-2.html
+++ b/bidder-sign-up-2.html
@@ -63,32 +63,22 @@
   <section class="section">
     <div class="container">
       <div class="form-row justify-content-center">
-        <div class="col-sm-11 col-md-8 col-xl-7">
+        <div class="col-sm-11 col-md-8 col-xl-6">
           <div class="card card-signup">
             <div class="row align-items-center mb-2">
               <div class="col">
-                <h2 class="h2 lh-1">Welcome to Asaas</h2>
+                <h2 class="h2 lh-1">National ID</h2>
               </div>
               <div class="col-auto">
                 <div>
-                  <img src="img/check-rounded.svg" alt="">
+                  <img src="img/lock.svg" alt="">
                 </div>
               </div>
             </div>
-            <div class="row">
-              <div class="col-xl-8">
-                <p class="pb-3">We hope you find awesome opportunities!. Here are some things to keep in mind:</p>
-              </div>
-            </div>
-            <ul class="list-check d-inline-block text-left fz-18 pb-0 pb-lg-3">
-              <li>Our platform’s goal is to protect both sides in the bidding process.</li>
-              <li>Auctioneers require bidders to deposit roughly 1% of the starting price.</li>
-              <li>If you don’t win the auction you deposited on, your deposit is refunded in full minus bank transaction fees.</li>
-              <li>When you win an auction, Asaas automatically shares your contacts with the Auctioneer. They will then contact you to facilitate the payment and transfer of property.</li>
-            </ul>
-            <div class="row align-items-center">
+            <p class="pb-3 text-gray">You need to verify your identity before you can start bidding. We use secure validation through licensed 3-rd party provider that integrates with Saudi Arabia’s National ID information.</p>
+            <div class="row align-items-center mt-4">
               <div class="col-sm-auto">
-                <a href="#!" class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Start browsing and bidding</a>
+                <button class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Verify and Start Bidding</button>
               </div>
             </div>
           </div>
