--- a/bidder-sign-up-5.html
+++ b/bidder-sign-up-5.html
@@ -63,109 +63,34 @@
   <section class="section">
     <div class="container">
       <div class="form-row justify-content-center">
-        <div class="col-sm-11 col-md-8 col-xl-10">
+        <div class="col-sm-11 col-md-8 col-xl-7">
           <div class="card card-signup">
             <div class="row align-items-center mb-2">
               <div class="col">
-                <h2 class="h2 lh-1">Last step</h2>
+                <h2 class="h2 lh-1">Welcome to Asaas</h2>
               </div>
               <div class="col-auto">
                 <div>
-                  <img src="img/lock.svg" alt="">
+                  <img src="img/check-rounded.svg" alt="">
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-xl-8">
-                <p class="pb-3">This information will only be shared with Auctioneers if you win one of their auctions. You can register as a company or a private bidder.</p>
+                <p class="pb-3 text-gray">We hope you find awesome opportunities!. Here are some things to keep in mind:</p>
               </div>
             </div>
-            <form id="form">
-              <div class="row">
-                <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="mb-2">First name</div>
-                    <input type="text" class="form-control" placeholder="Albus" name="firstname" disabled>
-                    <div class="fz-14 mt-2">Confirmed through your government ID</div>
-                  </div>
-                </div>
-                <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="mb-2">Second name</div>
-                    <input type="text" class="form-control" placeholder="Severus" name="firstname" disabled>
-                    <div class="fz-14 mt-2">Confirmed through your government ID</div>
-                  </div>
-                </div>
+            <ul class="list-check d-inline-block text-left fz-18 pb-0 pb-lg-3">
+              <li>Our platform’s goal is to protect both sides in the bidding process.</li>
+              <li>Auctioneers require bidders to deposit roughly 1% of the starting price.</li>
+              <li>If you don’t win the auction you deposited on, your deposit is refunded in full minus bank transaction fees.</li>
+              <li>When you win an auction, Asaas automatically shares your contacts with the Auctioneer. They will then contact you to facilitate the payment and transfer of property.</li>
+            </ul>
+            <div class="row align-items-center">
+              <div class="col-sm-auto">
+                <button class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Start browsing and bidding</button>
               </div>
-              <div class="row">
-                <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="mb-2">Third name</div>
-                    <input type="text" class="form-control" placeholder="Al" name="firstname" disabled>
-                    <div class="fz-14 mt-2">Confirmed through your government ID</div>
-                  </div>
-                </div>
-                <div class="col-xl-6">
-                  <div class="form-group disabled">
-                    <div class="mb-2">Family name</div>
-                    <input type="text" class="form-control" placeholder="Potter" name="firstname" disabled>
-                    <div class="fz-14 mt-2">Confirmed through your government ID</div>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-xl-6">
-                  <div class="form-group">
-                    <div class="mb-2">Your email<span class="text-red">*</span></div>
-                    <input type="email" class="form-control" placeholder="albus@ministryofmagic.com.sa" name="email">
-                  </div>
-                </div>
-              </div>
-              <div class="row my-2 pb-3">
-                <div class="col-auto">
-                  <label class="check-group checkbox-group">
-                    <input type="checkbox">
-                    <div>Sign up as a company</div>
-                  </label>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-xl-6">
-                  <div class="form-group">
-                    <div class="mb-2">Company name<span class="text-red">*</span></div>
-                    <input type="text" class="form-control" placeholder="Awesome Industries Co." name="firstname">
-                  </div>
-                </div>
-                <div class="col-xl-6">
-                  <div class="form-group">
-                    <div class="row row-1 mb-2 align-items-center">
-                      <div class="col">Registration number<span class="text-red">*</span>
-                      </div>
-                      <div class="col-auto fz-14">
-                        <div id="the-count" class="the-count">
-                          <span id="current">0</span>
-                          <span id="maximum">/8</span>
-                        </div>
-                      </div>
-                    </div>
-                    <input type="number" class="form-control" placeholder="1010584421" id="count-eight" maxlength="8" name="registrationnumber">
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-xl-6">
-                  <div class="form-group">
-                    <div class="mb-2">Company address<span class="text-red">*</span></div>
-                    <input type="text" class="form-control" placeholder="52 King Abdullah Rd, Riyadh" name="firstname">
-                  </div>
-                </div>
-              </div>
-              <div class="row align-items-center mt-4">
-                <div class="col-sm-auto">
-                  <a href="#!" class="btn btn-success btn-sign ml-0 fz-18 py-2 d-block d-sm-inline-block">Start bidding on Asaas</a>
-                </div>
-              </div>
-            </form>
+            </div>
           </div>
         </div>
       </div>
