--- a/auctioneer-account-edit.html
+++ b/auctioneer-account-edit.html
@@ -88,7 +88,7 @@
                       <div class="col-sm-6 col-lg-4">
                         <div id="file-upload-form" class="uploader">
                           <input id="file-upload" type="file" name="fileUpload" accept="image/*"/>
-                          <label for="file-upload" id="file-drag">
+                          <label for="file-upload" id="file-drag" class="position-relative">
                             <img id="file-image" src="#!" alt="Preview" class="hidden">
                             <div id="start">
                               <i class="bg-upload" aria-hidden="true"></i>
@@ -98,8 +98,11 @@
                             <div id="response" class="hidden">
                               <div id="messages"></div>
                             </div>
+                            <a href="#!" class="delete-img">
+                              <img src="img/delete.svg" alt="">
+                            </a>
                           </label>
-                        </div>           
+                        </div>            
                       </div>
                       <div class="col-sm-6 col-lg-8 mt-3 mt-sm-0">
                         <div class="fz-14 confirmed">
