--- a/bidder-auctions.html
+++ b/bidder-auctions.html
@@ -41,19 +41,18 @@
       <div class="collapse navbar-collapse text-center text-xl-left" id="navbarTogglerDemo02">
         <ul class="navbar-nav ml-auto align-items-xl-center my-3 my-xl-0">
           <li class="nav-item">
-            <a class="nav-link active" href="#!">Live Auctions</a>
+            <a class="nav-link active" href="#!">Auctions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#!">How it works</a>
+            <a class="nav-link" href="#!">My Bids</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#!">Post an Auction</a>
+            <a class="nav-link" href="#!">Transactions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#!">Sign in</a>
+            <a class="nav-link" href="#!">Account</a>
           </li>
         </ul>
-        <a href="#!" class="btn btn-success btn-sign mb-3 mb-xl-0">Sign up now</a>
       </div>
     </div>
   </nav>
